# CBIR

./: .env.example  .gitignore  BaoCao_CSDL_DaPhuongTien.docx  Makefile  PLAN.md  PLAN.v1.md  README.md  REFACTOR_PGVECTOR.md  REQUIREMENTS.md  docker-compose.yml  ~$oCao_CSDL_DaPhuongTien.docx
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_pgvector_columns.py  0003_pgvector_notnull_indexes.py  0459248fa542_drop_old_jsonb_columns.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: compare.py  evaluate.py  images.py  search.py  visualize.py  ws_pipeline.py
backend/app/services/: __init__.py  evaluator.py  feature_cache.py  pipeline_emitter.py  plot.py  preprocess.py  search_engine.py  vector_search.py
backend/app/services/features/: __init__.py  _common.py  color_moments.py  glcm.py  hog.py  hsv.py  hu.py  lbp.py
backend/app/services/storage/: __init__.py  local.py
backend/scripts/: __init__.py  backfill_pgvector.py  seed_afhq.py
backend/tests/: conftest.py  test_evaluate_router.py  test_evaluator.py  test_feature_cache.py  test_features.py  test_health.py  test_images_router.py  test_pipeline_emitter.py  test_plot.py  test_preprocess.py  test_search_engine.py  test_search_rerank.py  test_search_router.py  test_seed_afhq.py  test_storage.py  test_visualize_router.py  test_ws_pipeline.py
docs/: BASE.md  BaoCao.docx  BaoCao.md  UPRAGDE.md
frontend/: .dockerignore  Dockerfile  package.json  (+5 more)
(+23 files in other folders)
