[project]
name = "animal-face-cbir-backend"
version = "0.1.0"
description = "FastAPI service for the Animal Face CBIR project."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.13,<2",
    "aiofiles>=24.1.0,<25",
    "numpy>=1.26,<3",
    "scipy>=1.13,<2",
    "scikit-image>=0.24,<1",
    "opencv-python-headless>=4.10,<5",
    "Pillow>=10.4,<12",
    "matplotlib>=3.9,<4",
    "pgvector>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<7",
    "httpx>=0.27,<1",
    "anyio>=4.6,<5",
    "ruff>=0.7,<1",
    "aiosqlite>=0.20,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
